# AkvaLink

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  SECURITY.md  TODO.md  akvalink.cmd  akvalink.sh  build.cmd  build.sh  conftest.py  flash.cmd  flash.sh  launch-akvalink-wsl.cmd  launch-akvalink.cmd  launch-aqualink-wsl.cmd  launch-aqualink.cmd  pytest.ini  requirements-dev.txt  sdkconfig.defaults  sdkconfig.defaults.ap  sdkconfig.defaults.ble  sdkconfig.defaults.espnow  sdkconfig.defaults.sensor  sdkconfig.defaults.station  sdkconfig.defaults.wifi
.githooks/: pre-commit
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy-on-release.yml  pages.yml
app/: .gitignore  ANDROID.md  MAC.md  README.md  capacitor.config.json  package-lock.json  package.json  vite.config.js
app/scripts/: android-icon.mjs  build-web.mjs  ios-icon.mjs  ios-permissions.mjs
app/src/: ble-shim.js  main.js
app_flutter/: README.md  pubspec.yaml
app_flutter/android/app/: build.gradle.kts
app_flutter/android/app/src/main/: AndroidManifest.xml
app_flutter/android/app/src/main/kotlin/com/ublox/akvalink/: MainActivity.kt
app_flutter/ios/Runner/: Info.plist
app_flutter/ios/Runner.xcodeproj/: project.pbxproj
app_flutter/lib/: app_version.dart  main.dart  strings.dart  theme.dart
app_flutter/lib/ble/: akvalink_controller.dart  akvalink_uuids.dart
app_flutter/lib/ota/: ota_controller.dart
app_flutter/lib/screens/: home_screen.dart
app_flutter/lib/widgets/: hero_header.dart  ota_card.dart  temperature_card.dart
app_flutter/linux/: CMakeLists.txt
app_flutter/linux/runner/: my_application.cc
app_flutter/macos/Runner/: DebugProfile.entitlements  Info.plist
app_flutter/macos/Runner.xcodeproj/: project.pbxproj
app_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app_flutter/macos/Runner/Configs/: AppInfo.xcconfig
app_flutter/test/: ble_controller_test.dart  firmware_parse_test.dart  ota_controller_test.dart  spellcheck_test.dart
app_flutter/test/fakes/: fake_ble_platform.dart
app_flutter/windows/: CMakeLists.txt
app_flutter/windows/runner/: Runner.rc  main.cpp
config/: partitions.csv  sdkconfig.defaults  sdkconfig.defaults.ap  sdkconfig.defaults.ble  sdkconfig.defaults.espnow  sdkconfig.defaults.sensor  sdkconfig.defaults.station  sdkconfig.defaults.wifi
docs/: CONNECTIVITY.md  EINK_DISPLAY_PLAN.md  ENCLOSURE_DESIGN.md  GETTING_STARTED.md  KNOWN_LIMITATIONS.md  POWER_AND_HARDWARE.md  RF_AND_ANTENNA.md  WINTER_STORAGE_MODE.md
esphome/: akvalink.yaml  secrets.yaml.example
images/: README.md
main/: CHIPProjectConfig.h  CMakeLists.txt  Kconfig.projbuild  ap_web.cpp  ap_web.h  app_main.cpp  app_priv.h  ble_escape.cpp  ble_escape.h  ble_gatt.cpp  ble_gatt.h  ds18b20_task.cpp  ds18b20_task.h  ds2482_onewire.cpp  ds2482_onewire.h  espnow_sensor.cpp  espnow_sensor.h  idf_component.yml  qr_console.c  qr_console.h  station_web.cpp  station_web.h  web_page.cpp  web_page.h
scripts/: build.cmd  build.sh  detect-nora-w40-port.ps1  detect_nora_w40_port.py  flash.cmd  flash.sh  monitor-com.ps1  monitor_com.py  mqtt_monitor.py  publish.py  release.py
tests/: test_detect_port.py  test_monitor.py  test_project_layout.py  test_publish.py  test_release.py  test_web.py
web/: index.html  index.sv.html  manifest.json  serve.cmd
